tests/valid_tests/ifelse.minijava
class Test {
    public static void main() {
        int a; int b;
        a = 10;
        b = 20;
        if (a < b)
            System.out.println(1);
        else
            System.out.println(0);
        if (a > b)
            System.out.println(1);
        else
            System.out.println(0);
    }
}
