tests/invalid_tests/invalid_if_condition.minijava
class IfCondition {
    public static void main() {
        int x;
        x = 5;
        if (x) {
            System.out.println(1);
        }
    }
}
